# h3-pg

./: .gitignore  .mailmap  CHANGELOG.md  CITATION.cff  CMakeLists.txt  META.json.in  Makefile  README.md  h3-postgis.control  h3_postgis--4.0.0.sql
.github/: FUNDING.yml
.github/docker/: Dockerfile  entrypoint.sh  tools.sh
.github/workflows/: documentation.yml  pgxn.yml  test-linux.yml  test-macos.yml  test-windows.yml  test.yml
cmake/: AddPostgreSQLExtension.cmake  BundleSource.cmake  FindPostgreSQL.cmake  RunValidateExtupgrade.cmake  ValidateExtupgradeUnavailable.cmake
cmake/h3/: CMakeLists.txt
docs/: SKILL.md  api.md  development.md  pgxnclient.md
docs/h3-pg-skill/: SKILL.md
h3/: CMakeLists.txt
h3/sql/install/: 00-type.sql  01-indexing.sql  02-inspection.sql  03-traversal.sql  04-hierarchy.sql  05-regions.sql  06-edge.sql  07-vertex.sql  08-miscellaneous.sql  10-operators.sql  11-opclass_btree.sql  12-opclass_hash.sql  13-opclass_brin.sql  14-opclass_gist.sql  14-opclass_spgist.sql  15-opclass_gist.sql  20-casts.sql  30-extension.sql  31-wkb.sql  99-deprecated.sql  99-postgis.sql
h3/sql/updates/: h3--0.1.0--0.2.0.sql  h3--0.1.0.sql  h3--0.2.0--0.3.0.sql  h3--0.3.0--0.3.1.sql  h3--0.3.1--0.3.2.sql  h3--0.3.2--0.4.0.sql  h3--0.4.0--1.0.0.sql  h3--1.0.2--1.0.3.sql  h3--1.0.3--1.0.4.sql  h3--1.0.4--1.0.5.sql  h3--1.0.5--1.0.6.sql  h3--1.0.6--3.4.0.sql  h3--3.4.0--3.4.1.sql  h3--3.4.1--3.5.0.sql  h3--3.5.0--3.6.0.sql  h3--3.6.0--3.6.1.sql  h3--3.6.1--3.6.2.sql  h3--3.6.2--3.6.3.sql  h3--3.6.3--3.6.4.sql  h3--3.6.4--3.6.5.sql  h3--3.6.5--3.7.0.sql  h3--3.7.0--3.7.1.sql  h3--3.7.1--3.7.2.sql  h3--3.7.2--4.0.0.sql  h3--3.7.2--unreleased.sql  h3--4.0.0--4.0.1.sql  h3--4.0.0--unreleased.sql  h3--4.0.1--4.0.2.sql  h3--4.0.2--4.0.3.sql  h3--4.0.3--4.1.0.sql  h3--4.1.0--4.1.1.sql  h3--4.1.1--4.1.2.sql  h3--4.1.2--4.1.3.sql  h3--4.1.3--unreleased.sql  (+6 more)
h3/src/: algos.c  config.h.in  deprecated.c  extension.c  extension.h  guc.c  guc.h  indexing.c  init.c  opclass_btree.c  opclass_gist.c  opclass_hash.c  opclass_spgist.c  operators.c  polygon.h  srf.c  srf.h  type.c  upstream_macros.h  wkb_indexing.c
h3/test/: CMakeLists.txt
h3_postgis/: CMakeLists.txt
h3_postgis/src/: config.h.in  init.c  wkb.c  wkb.h  wkb_bbox3.c  wkb_bbox3.h  wkb_indexing.c  wkb_linked_geo.c  wkb_linked_geo.h  wkb_regions.c  wkb_split.c  wkb_split.h  wkb_vect3.c  wkb_vect3.h  wkb_vertex_graph.c  wkb_vertex_graph.h
h3_postgis/test/: CMakeLists.txt
include/: CMakeLists.txt  algos.h  deprecate.h  error.c  error.h  operators.h  type.h
scripts/: bundle  check-metadata  develop  documentation  postrelease  release
scripts/sql2doc/: Pipfile  generate.py  pyproject.toml  sql.lark
(+85 files in other folders)
