[tool.poetry]
name = "documentation"
version = "1.0.0"
description = "Autogenerate postgres extension documentation from sql files"
authors = ["Zacharias Knudsen <z@chari.as>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
lark = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
